--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
+{
+    "name": "calculadora-arbitro",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview"
+    },
+    "dependencies": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+      "vite": "^4.0.0",
+      "tailwindcss": "^3.3.2",
+      "postcss": "^8.4.24",
+      "autoprefixer": "^10.4.14"
+    }
+  }
+  
